// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea Component with label matches the snapshot 1`] = `
Array [
  <div
    className="text-label"
  >
    <label
      htmlFor="1"
    >
      some label
    </label>
  </div>,
  <textarea
    className="text-input"
    cols="60"
    id="1"
    onChange={[Function]}
    rows="8"
  />,
]
`;

exports[`Textarea Component without label matches the snapshot 1`] = `
Array [
  "",
  <textarea
    className="text-input"
    cols="60"
    id="1"
    onChange={[Function]}
    rows="8"
  />,
]
`;
